--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Recepies</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>1.Project - Recepies</h1>
+    <h1 class="header">1.Project - Odin Recipes</h1>
+    <div class="img-container">
+
+    </div>
     
 </body>
 </html>
