linked main page with pastaSalad page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="header">1.Project - Odin Recipes</h1>
-    <div class="img-container">
+    <a href="recipes/pastaSalad.html">Awesome Pasta Salad</a>
 
     </div>
     
