added pasta image under h1

--- a/recipes/pastaSalad.html
+++ b/recipes/pastaSalad.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Awesome Pasta Salad</h1>
+    <img class="pasta-image" src="/images/image.jpeg" alt="Awesome Pasta Salad">
 </body>
 </html>
