--- a/recipes/pastaSalad.html
+++ b/recipes/pastaSalad.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Awesome Pasta Salad</h1>
     <img class="pasta-image" src="/images/image.jpeg" alt="Awesome Pasta Salad">
+    <h3>Description</h3>
+    <p>A delicious pasta salad with fresh ingredients and herbs!</p>
+    <p>Easy to make, without any special techniques!</p>
 </body>
 </html>
