added a footer tag with HOME link to main page

--- a/recipes/pastaSalad.html
+++ b/recipes/pastaSalad.html
@@ -14,4 +14,5 @@
     <p>A delicious pasta salad with fresh ingredients and herbs!</p>
     <p>Easy to make, without any special techniques!</p>
 </body>
+<footer><a href="/index.html">HOME</a></footer>
 </html>
