added list header and list with ingredients

--- a/recipes/pastaSalad.html
+++ b/recipes/pastaSalad.html
@@ -10,9 +10,21 @@
 <body>
     <h1>Awesome Pasta Salad</h1>
     <img class="pasta-image" src="/images/image.jpeg" alt="Awesome Pasta Salad">
-    <h3>Description</h3>
+    <h2>Description</h2>
     <p>A delicious pasta salad with fresh ingredients and herbs!</p>
     <p>Easy to make, without any special techniques!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 (16 ounce) package fusilli (spiral) pasta</li>
+        <li>3 cups cherry tomatoes, halved</li>
+        <li>½ pound provolone cheese, cubed</li>
+        <li>½ pound salami, cubed</li>
+        <li>¼ pound sliced pepperoni, cut in half</li>
+        <li>1 large green bell pepper, cut into 1 inch pieces</li>
+        <li>1 (10 ounce) can black olives, drained</li>
+        <li>1 (4 ounce) jar pimentos, drained</li>
+        <li>1 (8 ounce) bottle Italian salad dressing</li>
+    </ul>
 </body>
 <footer><a href="/index.html">HOME</a></footer>
 </html>
