added main header and image

--- a/recipes/ramenBroccoli.html
+++ b/recipes/ramenBroccoli.html
@@ -8,6 +8,9 @@
     <title>Crunchy Ramen Broccoli Slaw</title>
 </head>
 <body>
+    <h1>Crunchy Ramen Broccoli Slaw</h1>
+    <img src="/images/chinese-broccoli-slaw.jpeg" alt="Crunchy Ramen Broccoli Slaw">
+    
     
 </body>
 </html>
