added footer with link to main page

--- a/recipes/ramenBroccoli.html
+++ b/recipes/ramenBroccoli.html
@@ -10,7 +10,8 @@
 <body>
     <h1>Crunchy Ramen Broccoli Slaw</h1>
     <img src="/images/chinese-broccoli-slaw.jpeg" alt="Crunchy Ramen Broccoli Slaw">
-    
+
     
 </body>
+<footer><a href="/index.html">HOME</a></footer>
 </html>
