added id for the image,description and ingredients

--- a/recipes/ramenBroccoli.html
+++ b/recipes/ramenBroccoli.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     <h1>Crunchy Ramen Broccoli Slaw</h1>
-    <img src="/images/chinese-broccoli-slaw.jpeg" alt="Crunchy Ramen Broccoli Slaw">
-
+    <img id="ramen-broccoli-img" src="/images/chinese-broccoli-slaw.jpeg" alt="Crunchy Ramen Broccoli Slaw">
+    <h2>Description</h2>
+    <p>A delicious chinese ramen with fresh ingredients and herbs!</p>
+    <p>Easy to make, without any special techniques!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>¼ cup butter</li>
+        <li>2 (3 ounce) packages Oriental-flavor ramen noodle soup, seasoning packet reserved</li>
+        <li>½ cup slivered almonds</li>
+        <li>¼ cup sesame seeds</li>
+        <li>1 (16 ounce) package broccoli coleslaw mix</li>
+        <li>½ cup chopped green onion</li>
+    </ul>
     
 </body>
 <footer><a href="/index.html">HOME</a></footer>
