linked main page to beefSalad page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 class="header">1.Project - Odin Recipes</h1>
     <a href="recipes/pastaSalad.html">Awesome Pasta Salad</a>
     <a href="recipes/ramenBroccoli.html">Crunchy Ramen Broccoli Slaw</a>
+    <a href="recipes/beefSalad.html">Thai Beef Salad</a>
 
     </div>
     
