added main header and image of beef salad

--- a/recipes/beefSalad.html
+++ b/recipes/beefSalad.html
@@ -8,6 +8,8 @@
     <title>Thai Beef Salad</title>
 </head>
 <body>
+    <h1>Thai Beef Salad</h1>
+    <img id="beef-salad-img" src="/images/thai-beef-salad.jpeg" alt="Thai Beef Salad in a plate">
     
 </body>
 </html>
