added footer with link to main page

--- a/recipes/beefSalad.html
+++ b/recipes/beefSalad.html
@@ -12,4 +12,5 @@
     <img id="beef-salad-img" src="/images/thai-beef-salad.jpeg" alt="Thai Beef Salad in a plate">
     
 </body>
+<footer><a href="/index.html">HOME</a></footer>
 </html>
