--- a/recipes/beefSalad.html
+++ b/recipes/beefSalad.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Thai Beef Salad</h1>
     <img id="beef-salad-img" src="/images/thai-beef-salad.jpeg" alt="Thai Beef Salad in a plate">
-    
+    <h2>Description</h2>
+    <p>A delicious thai beef salad with fresh ingredients and herbs!</p>
+    <p>Easy to make, without any special techniques!</p>
 </body>
 <footer><a href="/index.html">HOME</a></footer>
 </html>
