added ingredients section

--- a/recipes/beefSalad.html
+++ b/recipes/beefSalad.html
@@ -13,6 +13,17 @@
     <h2>Description</h2>
     <p>A delicious thai beef salad with fresh ingredients and herbs!</p>
     <p>Easy to make, without any special techniques!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 cup lime juice</li>
+        <li>1 cup chopped fresh cilantro, plus more for garnish</li>
+        <li>1 cup chopped fresh mint leaves</li>
+        <li>½ cup white sugar</li>
+        <li>⅓ cup fish sauce</li>
+        <li>2 green onions, chopped</li>
+        <li>1 stalk lemongrass, smashed and cut into 1-inch pieces</li>
+        <li>1 tablespoon sweet chili sauce</li>
+    </ul>
 </body>
 <footer><a href="/index.html">HOME</a></footer>
 </html>
