--- a/recipes/beefSalad.html
+++ b/recipes/beefSalad.html
@@ -24,6 +24,15 @@
         <li>1 stalk lemongrass, smashed and cut into 1-inch pieces</li>
         <li>1 tablespoon sweet chili sauce</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Mix lime juice, cilantro, mint leaves, sugar, fish sauce, green onions, lemongrass, and chili sauce together in a large bowl until sugar is dissolved. Adjust the flavor, if desired, by adding more sugar and/or fish sauce; set aside.</li>
+        <li>Preheat an outdoor grill for high heat and lightly oil the grate.</li>
+        <li>Cook steak on the preheated grill until it begins to firm and is hot and slightly pink in the center, about 4 to 6 minutes per side. An instant-read thermometer inserted into the center should read 140 degrees F (60 degrees C).</li>
+        <li>Transfer steak to a chopping board and slice into thin strips; add steak and its juices into the bowl with herb mixture. Cover and refrigerate for at least 3 hours.</li>
+        <li>Place lettuce in a salad bowl; arrange cucumber on top. Add steak and pour all of the herb mixture on top. Scatter cherry tomatoes over salad and garnish with fresh cilantro leaves.</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 <footer><a href="/index.html">HOME</a></footer>
 </html>
