corrected extensions of the images

--- a/recipes/beefSalad.html
+++ b/recipes/beefSalad.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Thai Beef Salad</h1>
-    <img class="recipe-img" src="/images/thai-beef-salad.jpeg" alt="Thai Beef Salad in a plate">
+    <img class="recipe-img" src="/images/thai-beef-salad.jpg" alt="Thai Beef Salad in a plate">
     <h2>Description</h2>
     <p>A delicious thai beef salad with fresh ingredients and herbs!</p>
     <p>Easy to make, without any special techniques!</p>
