--- a/recipes/pastaSalad.html
+++ b/recipes/pastaSalad.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Awesome Pasta Salad</h1>
-    <img class="recipe-img" src="/images/image.jpeg" alt="Awesome Pasta Salad">
+    <img class="recipe-img" src="/images/image.jpg" alt="Awesome Pasta Salad">
     <h2>Description</h2>
     <p>A delicious pasta salad with fresh ingredients and herbs!</p>
     <p>Easy to make, without any special techniques!</p>
