--- a/recipes/ramenBroccoli.html
+++ b/recipes/ramenBroccoli.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Crunchy Ramen Broccoli Slaw</h1>
-    <img class="recipe-img" src="/images/chinese-broccoli-slaw.jpeg" alt="Crunchy Ramen Broccoli Slaw">
+    <img class="recipe-img" src="/images/chinese-broccoli-slaw.jpg" alt="Crunchy Ramen Broccoli Slaw">
     <h2>Description</h2>
     <p>A delicious chinese ramen with fresh ingredients and herbs!</p>
     <p>Easy to make, without any special techniques!</p>
