--- a/recipes/pastaSalad.html
+++ b/recipes/pastaSalad.html
@@ -34,5 +34,5 @@
         <li>Enjoy!</li>
     </ol>
 </body>
-<footer><a href="/index.html">HOME</a></footer>
+<footer><a href="../index.html">HOME</a></footer>
 </html>
