--- a/recipes/ramenBroccoli.html
+++ b/recipes/ramenBroccoli.html
@@ -42,5 +42,5 @@
     </ol>
     
 </body>
-<footer><a href="/index.html">HOME</a></footer>
+<footer><a href="../index.html">HOME</a></footer>
 </html>
