--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Odin Recipes</title>
+    <title>1.Project - Odin Recipes</title>
 </head>
 <body>
     <h1 class="header">1.Project - Odin Recipes</h1>
